crates/solidity/testing/snapshots/bindings_output/expressions/revert_named_args/generated/0.4.22-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[ input.sol:2:18 ]
   │
 2 │ ╭─▶     error Failure(
   ┆ ┆   
 5 │ ├─▶     );
   │ │            
   │ ╰──────────── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[ input.sol:8:23 ]
   │
 8 │         revert Failure({severity: 100, cause: "Testing"});
   │                       ─────────────────┬─────────────────  
   │                                        ╰─────────────────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     error Failure(
   │           ───┬───  
   │              ╰───── name: 2
   │ 
 7 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 3
 8 │         revert Failure({severity: 100, cause: "Testing"});
   │                ───┬───  
   │                   ╰───── name: 4
   │
   ├─[ input.sol:1:1 ]
   │
 2 │     error Failure(
   │     ──┬──  
   │       ╰──── unresolved
   │ 
 8 │         revert Failure({severity: 100, cause: "Testing"});
   │         ───┬──  
   │            ╰──── refs: built-in, built-in
───╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ contract Test {
    ┆ ┆   
 10 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │   ╭─▶     error Failure(
    ┆   ┆   
  5 │ │ ├─▶     );
    │ │ │            
    │ │ ╰──────────── definiens: 2
  6 │ ╭───▶ 
    ┆ ┆     
  9 │ ├───▶     }
    │ │             
    │ ╰───────────── definiens: 3
    │
    ├─[ input.sol:1:1 ]
    │
  8 │         revert Failure({severity: 100, cause: "Testing"});
    │ ─────────────────────────────┬─────────────────────────────  
    │                              ╰─────────────────────────────── definiens: 4
────╯
